# morgo

./: .pre-commit-config.yaml  .python-version  README.md  pyproject.toml  tox.ini
docs/: design.md
morgo/: exceptions.py  task.py
tests/: test_tasks.py
