[tool.poetry]
name = "morgo"
version = "0.1.0"
description = "A distributed DAG tool"
authors = ["Sam Phinizy <nipper@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"